--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="container">
 
-        <div class="row header">
-            <h1>Dice Game</h1>
+        <div class="row-header">
+            <h1>Dice </h1>
         </div>
 
         <div class="row ">
             <div>
-                <button id="roll">Roll the dice</button>
+                <button id="roll">Roll the Dice</button>
             </div>
         </div>
 
