--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <div class="row-header">
             <h1>Dice </h1>
         </div>
+        <div id="totalScore">
+            <h1>Total Score</h1>
+
+        </div>
 
         <div class="row ">
             <div>
