--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <h1>Dice </h1>
         </div>
         <div id="totalScore">
-            <h1>Total Score</h1>
+            <h1>Total Score:</h1>
+            <h1>0</h1>
 
         </div>
 
